<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <!-- App Name -->
    <string name="app_name">Xiaomi Parts</string>

    <!-- Touch settings -->
    <string name="touch_title">Touch Sampling Rate</string>
    <string name="touch_high_sampling_rate_title">High Touch Sampling Rate</string>
    <string name="touch_high_sampling_rate_footer">Increase touchscreen polling rate</string>

    <!-- Touch game mode -->
    <string name="touch_game_mode_category_title">Game Mode</string>
    <string name="touch_game_mode_title">Touch Game Mode</string>
    <string name="touch_game_mode_summary">Optimise touch sensitivity, idle baseline and report rate for gaming</string>
</resources>
