<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/touch_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="touch_high_sampling_rate"
        android:title="@string/touch_high_sampling_rate_title"
        android:enabled="false" />

    <com.android.settingslib.widget.FooterPreference
        android:title="@string/touch_high_sampling_rate_footer"
        android:selectable="false" />

    <PreferenceCategory
        android:title="@string/touch_game_mode_category_title">

        <SwitchPreference
            android:key="touch_game_mode"
            android:title="@string/touch_game_mode_title"
            android:summary="@string/touch_game_mode_summary"
            android:enabled="false" />

    </PreferenceCategory>

</PreferenceScreen>
